[gd_scene load_steps=61 format=2]

[ext_resource path="res://addons/mixing-desk/sound/nonspatial/ran_cont.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/mario/sounds.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Dive1.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/mario/sounds_mario/Stomped3.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Damage1.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/mario/sounds_mario/Stomped1.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Damage2.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/actors/mario/sounds_mario/Stomped2.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Dive2.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Fall1.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/TripleJump1.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/TripleJump2.wav" type="AudioStream" id=12]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Jump1.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Jump3.wav" type="AudioStream" id=14]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Jump4.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Jump2.wav" type="AudioStream" id=16]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/DoubleJump1.wav" type="AudioStream" id=17]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Dive3.wav" type="AudioStream" id=18]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/DoubleJump2.wav" type="AudioStream" id=19]
[ext_resource path="res://scenes/actors/mario/sounds_misc/pound_hit.wav" type="AudioStream" id=20]
[ext_resource path="res://scenes/actors/mario/sounds_misc/pound_windup.wav" type="AudioStream" id=21]
[ext_resource path="res://scenes/actors/mario/sounds_misc/skid.wav" type="AudioStream" id=22]
[ext_resource path="res://scenes/actors/mario/sounds_misc/double_jump.wav" type="AudioStream" id=23]
[ext_resource path="res://scenes/actors/mario/sounds_misc/high_jump.wav" type="AudioStream" id=24]
[ext_resource path="res://scenes/actors/mario/sounds_misc/jump.wav" type="AudioStream" id=25]
[ext_resource path="res://scenes/actors/mario/sounds_misc/footsteps/default1.wav" type="AudioStream" id=26]
[ext_resource path="res://scenes/actors/mario/sounds_misc/duck.wav" type="AudioStream" id=27]
[ext_resource path="res://scenes/actors/mario/sounds_misc/spin.wav" type="AudioStream" id=28]
[ext_resource path="res://scenes/actors/mario/sounds_misc/wall_jump.wav" type="AudioStream" id=29]
[ext_resource path="res://scenes/actors/mario/sounds_misc/footsteps/default2.wav" type="AudioStream" id=30]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Death1.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/sounds/death.wav" type="AudioStream" id=32]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/LastHit1.wav" type="AudioStream" id=33]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Powerup2.wav" type="AudioStream" id=34]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Powerup1.wav" type="AudioStream" id=35]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Powerup3.wav" type="AudioStream" id=36]
[ext_resource path="res://scenes/actors/mario/sounds_misc/powerup.wav" type="AudioStream" id=37]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Shine2.wav" type="AudioStream" id=38]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Shine1.wav" type="AudioStream" id=39]
[ext_resource path="res://scenes/actors/mario/sounds_misc/water_splash.wav" type="AudioStream" id=40]
[ext_resource path="res://scenes/actors/mario/sounds_misc/swim.ogg" type="AudioStream" id=41]
[ext_resource path="res://scenes/actors/mario/sounds_misc/spin_water.wav" type="AudioStream" id=42]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Lava2.wav" type="AudioStream" id=43]
[ext_resource path="res://scenes/actors/mario/sounds_misc/burn.wav" type="AudioStream" id=44]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Lava1.wav" type="AudioStream" id=45]
[ext_resource path="res://classes/BusGroup.gd" type="Script" id=46]
[ext_resource path="res://classes/SoundGroup.gd" type="Script" id=47]
[ext_resource path="res://scenes/actors/mario/sounds_misc/footsteps/CLANG.wav" type="AudioStream" id=48]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L32_AWAWAU.wav" type="AudioStream" id=49]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L52_TALK4.wav" type="AudioStream" id=50]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L32_WAAA.wav" type="AudioStream" id=51]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L53_TALK5.wav" type="AudioStream" id=52]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L36_TALK1.wav" type="AudioStream" id=53]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L29_NOO.wav" type="AudioStream" id=54]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L41_AHA.wav" type="AudioStream" id=55]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L25_HUNNN3.wav" type="AudioStream" id=56]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L20_OHYEAH.wav" type="AudioStream" id=57]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L43_HUNNN2.wav" type="AudioStream" id=58]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/talk/STRM_L21_OK.wav" type="AudioStream" id=59]
[ext_resource path="res://scenes/actors/mario/sounds_luigi/Timeout1.wav" type="AudioStream" id=60]

[node name="Sounds" type="Node"]
script = ExtResource( 2 )
normal_bus = "Voices"
metal_bus = "VoicesMetal"

[node name="VoiceEffects" type="Node" parent="."]
script = ExtResource( 46 )

[node name="JumpSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Jump1" type="AudioStreamPlayer" parent="VoiceEffects/JumpSounds"]
stream = ExtResource( 13 )
bus = "Voices"

[node name="Jump2" type="AudioStreamPlayer" parent="VoiceEffects/JumpSounds"]
stream = ExtResource( 16 )
bus = "Voices"

[node name="Jump3" type="AudioStreamPlayer" parent="VoiceEffects/JumpSounds"]
stream = ExtResource( 14 )
bus = "Voices"

[node name="Jump4" type="AudioStreamPlayer" parent="VoiceEffects/JumpSounds"]
stream = ExtResource( 15 )
bus = "Voices"

[node name="DoubleJumpSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="DoubleJump1" type="AudioStreamPlayer" parent="VoiceEffects/DoubleJumpSounds"]
stream = ExtResource( 17 )
bus = "Voices"

[node name="DoubleJump2" type="AudioStreamPlayer" parent="VoiceEffects/DoubleJumpSounds"]
stream = ExtResource( 19 )
bus = "Voices"

[node name="TripleJumpSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="TripleJump1" type="AudioStreamPlayer" parent="VoiceEffects/TripleJumpSounds"]
stream = ExtResource( 11 )
bus = "Voices"

[node name="TripleJump2" type="AudioStreamPlayer" parent="VoiceEffects/TripleJumpSounds"]
stream = ExtResource( 12 )
bus = "Voices"

[node name="DiveSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Dive1" type="AudioStreamPlayer" parent="VoiceEffects/DiveSounds"]
stream = ExtResource( 3 )
bus = "Voices"

[node name="Dive2" type="AudioStreamPlayer" parent="VoiceEffects/DiveSounds"]
stream = ExtResource( 9 )
bus = "Voices"

[node name="Dive3" type="AudioStreamPlayer" parent="VoiceEffects/DiveSounds"]
stream = ExtResource( 18 )
bus = "Voices"

[node name="FallSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Fall1" type="AudioStreamPlayer" parent="VoiceEffects/FallSounds"]
stream = ExtResource( 10 )
bus = "Voices"

[node name="HitSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Hit1" type="AudioStreamPlayer" parent="VoiceEffects/HitSounds"]
stream = ExtResource( 5 )
bus = "Voices"

[node name="Hit2" type="AudioStreamPlayer" parent="VoiceEffects/HitSounds"]
stream = ExtResource( 7 )
bus = "Voices"

[node name="LastHitSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="LastHit1" type="AudioStreamPlayer" parent="VoiceEffects/LastHitSounds"]
stream = ExtResource( 33 )
volume_db = -2.0
bus = "Voices"

[node name="StompedSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Stomped1" type="AudioStreamPlayer" parent="VoiceEffects/StompedSounds"]
stream = ExtResource( 6 )
bus = "Voices"

[node name="Stomped2" type="AudioStreamPlayer" parent="VoiceEffects/StompedSounds"]
stream = ExtResource( 8 )
bus = "Voices"

[node name="Stomped3" type="AudioStreamPlayer" parent="VoiceEffects/StompedSounds"]
stream = ExtResource( 4 )
bus = "Voices"

[node name="DeathSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Death1" type="AudioStreamPlayer" parent="VoiceEffects/DeathSounds"]
stream = ExtResource( 31 )
bus = "Voices"

[node name="TimeoutSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Timeout1" type="AudioStreamPlayer" parent="VoiceEffects/TimeoutSounds"]
stream = ExtResource( 60 )
bus = "Voices"

[node name="PowerupSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Powerup1" type="AudioStreamPlayer" parent="VoiceEffects/PowerupSounds"]
stream = ExtResource( 35 )
volume_db = 2.0
bus = "Voices"

[node name="Powerup2" type="AudioStreamPlayer" parent="VoiceEffects/PowerupSounds"]
stream = ExtResource( 34 )
volume_db = 2.0
bus = "Voices"

[node name="Powerup3" type="AudioStreamPlayer" parent="VoiceEffects/PowerupSounds"]
stream = ExtResource( 36 )
volume_db = 2.0
bus = "Voices"

[node name="LavaHurtSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Lava1" type="AudioStreamPlayer" parent="VoiceEffects/LavaHurtSounds"]
stream = ExtResource( 45 )
volume_db = -9.5
bus = "Voices"

[node name="Lava2" type="AudioStreamPlayer" parent="VoiceEffects/LavaHurtSounds"]
stream = ExtResource( 43 )
volume_db = -3.5
bus = "Voices"

[node name="ShineSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Shine1" type="AudioStreamPlayer" parent="VoiceEffects/ShineSounds"]
stream = ExtResource( 39 )
volume_db = 3.5
bus = "Voices"

[node name="Shine2" type="AudioStreamPlayer" parent="VoiceEffects/ShineSounds"]
stream = ExtResource( 38 )
volume_db = 4.5
bus = "Voices"

[node name="SpeakSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Talk1" type="AudioStreamPlayer" parent="VoiceEffects/SpeakSounds"]
stream = ExtResource( 53 )
volume_db = -4.0
bus = "Voices"

[node name="Talk2" type="AudioStreamPlayer" parent="VoiceEffects/SpeakSounds"]
stream = ExtResource( 50 )
volume_db = -4.0
bus = "Voices"

[node name="Talk3" type="AudioStreamPlayer" parent="VoiceEffects/SpeakSounds"]
stream = ExtResource( 52 )
volume_db = -4.0
bus = "Voices"

[node name="HappySounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Happy1" type="AudioStreamPlayer" parent="VoiceEffects/HappySounds"]
stream = ExtResource( 55 )
volume_db = -4.0
bus = "Voices"

[node name="ShockedSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Shocked1" type="AudioStreamPlayer" parent="VoiceEffects/ShockedSounds"]
stream = ExtResource( 51 )
volume_db = -4.0
bus = "Voices"

[node name="Shocked2" type="AudioStreamPlayer" parent="VoiceEffects/ShockedSounds"]
stream = ExtResource( 49 )
volume_db = -4.0
bus = "Voices"

[node name="AgreeSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Agree1" type="AudioStreamPlayer" parent="VoiceEffects/AgreeSounds"]
stream = ExtResource( 59 )
volume_db = -4.0
bus = "Voices"

[node name="Agree2" type="AudioStreamPlayer" parent="VoiceEffects/AgreeSounds"]
stream = ExtResource( 57 )
volume_db = -4.0
bus = "Voices"

[node name="DisagreeSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Disagree1" type="AudioStreamPlayer" parent="VoiceEffects/DisagreeSounds"]
stream = ExtResource( 54 )
volume_db = -4.0
bus = "Voices"

[node name="ThinkSounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Think1" type="AudioStreamPlayer" parent="VoiceEffects/ThinkSounds"]
stream = ExtResource( 58 )
volume_db = -4.0
bus = "Voices"

[node name="AngrySounds" type="Node" parent="VoiceEffects"]
script = ExtResource( 47 )

[node name="Angry1" type="AudioStreamPlayer" parent="VoiceEffects/AngrySounds"]
stream = ExtResource( 56 )
volume_db = -4.0
bus = "Voices"

[node name="Footsteps" type="Node" parent="."]

[node name="Default" type="Node" parent="Footsteps"]
script = ExtResource( 1 )
sound_number = 1
bus = "Sounds"

[node name="Step1" type="AudioStreamPlayer" parent="Footsteps/Default"]
stream = ExtResource( 26 )
volume_db = -2.5
bus = "Sounds"

[node name="Step2" type="AudioStreamPlayer" parent="Footsteps/Default"]
stream = ExtResource( 30 )
volume_db = -2.5
bus = "Sounds"

[node name="Metal" type="Node" parent="Footsteps"]
script = ExtResource( 47 )
bus = "Sounds"

[node name="Step1" type="AudioStreamPlayer" parent="Footsteps/Metal"]
stream = ExtResource( 48 )
volume_db = -7.0
bus = "Sounds"

[node name="OtherSounds" type="Node" parent="."]

[node name="GPHit" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 20 )
volume_db = -7.5
bus = "Sounds"

[node name="GPWindup" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 21 )
volume_db = -7.5
bus = "Sounds"

[node name="Skid" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 22 )
volume_db = -7.5
bus = "Sounds"

[node name="Spin" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 28 )
volume_db = -7.5
bus = "Sounds"

[node name="Duck" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 27 )
volume_db = -7.5
bus = "Sounds"

[node name="Jump" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 25 )
volume_db = -7.5
pitch_scale = 1.15
bus = "Sounds"

[node name="WallJump" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 29 )
volume_db = -7.5
bus = "Sounds"

[node name="DoubleJump" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 23 )
volume_db = -7.5
pitch_scale = 1.15
bus = "Sounds"

[node name="TripleJump" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 24 )
volume_db = -7.5
pitch_scale = 1.15
bus = "Sounds"

[node name="LastHit8Bit" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 32 )
volume_db = -0.75
bus = "Sounds"

[node name="Powerup" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 37 )
volume_db = -6.0
bus = "Sounds"

[node name="WaterSplash" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 40 )
volume_db = -14.0
bus = "Sounds"

[node name="Swim" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 41 )
volume_db = -15.0
bus = "Sounds"

[node name="SpinWater" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 42 )
volume_db = 5.0
bus = "Sounds"

[node name="Burn" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 44 )
volume_db = -7.0
bus = "Sounds"
